tests/language_modules/04_types/invalid_semantics/unknown_let_type.vf
module UnknownLetType

procedure main()
is
    let value: MissingType = 0
    check true
end main

end UnknownLetType